Updating css links index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Reddraft Web Design</title>
   <link rel="stylesheet" type="text/css" href="vendors/css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 </head>
 
 <body>
