--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 </head>
 
 <body>
+
+    <!-- HEADER -->
+    
+    <header>
+
+      <nav>
+        <a href="#"><img src="resources/img/logo.png" alt="reddraft logo"></a>
+        <ul>
+          <li><a href="#about">The Team</a></li>
+          <li><a href="#works">Projects</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </nav>
+
+      <div class="hero-text box">
+        <h1>We are a digital agency who design and develop beautiful web sites</h1>
+        <i>This is scrolling Icon</i>
+      </div>
+    
+    </header>
+
+
   
 </body>
 </html>
