--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
-  <title>Reddraft Web Design</title>
+  <title>Reddraft Web Design Agency</title>
   <link rel="stylesheet" type="text/css" href="vendors/css/reset.css" />
   <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
 </head>
