Added main styles in header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Reddraft Web Design Agency</title>
   <link rel="stylesheet" type="text/css" href="vendors/css/reset.css" />
   <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+  <link href='https://fonts.googleapis.com/css?family=Lato:100,400,300,300italic,400italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -15,18 +16,23 @@
     <header>
 
       <nav>
-        <a href="#"><img src="resources/img/logo.png" alt="reddraft logo"></a>
-        <ul>
+        <a href="#">
+          <img src="resources/img/logo-red.png" alt="reddraft logo" class="logo">
+        </a>
+        <ul class="main-nav">
           <li><a href="#about">The Team</a></li>
           <li><a href="#works">Projects</a></li>
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
 
-      <div class="hero-text box">
+      <div class="hero-text-box">
         <h1>We are a digital agency who design and develop beautiful web sites</h1>
-        <i>This is scrolling Icon</i>
       </div>
+      <a href="#" class="scroll">
+        <img src="resources/img/mouse.png">
+      </a>
+      
     
     </header>
 
