cleaned main _about.scss

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="resources/img/logo-red.png" alt="reddraft logo" class="logo">
         </a>
         <ul class="main-nav">
-          <li><a href="#about">Team</a></li>
+          <li><a href="#team">Team</a></li>
           <li><a href="#works">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,7 +39,7 @@
     <!-- ABOUT SECTION -->
 
 
-    <section class="about-section">
+    <section id="team" class="about-section">
 
       <div class="split-layout"><!-- id="splitlayout" class="splitlayout"-->
 
@@ -48,22 +48,27 @@
 
             <div class="intro-content"><!-- class="intro-content" -->
 
-              <div>
+              <div class="profile">
                 <img src="resources/img/profile2.jpg" alt="Profile2">
               </div>
-              <h2><span>Vanessa Alvarez </span><span>Front End Web Developer</span></h2>
+              <h2>
+                <span>Vanessa Alvarez</span>
+                <span>Front End Web Developer</span>
+              </h2>
             </div>
             
           </div>
+
 
           <div class="side side-right"><!-- class="side side-right" -->
 
             <div class="intro-content"><!-- class="intro-content" -->
 
-              <div>
+              <div class="profile">
                 <img src="resources/img/profile1.jpg" alt="Profile1">
               </div>
               <h2><span>Ricardo Garcia </span><span>Front End Web Developer</span></h2>
+
             </div>
             
           </div>          
